crates/toml_edit/tests/fixtures/invalid/float-underscore-before.stderr
TOML parse error at line 1, column 7
  |
1 | bad = _1.2
  |       ^
Invalid integer
Expected leading digit
